--- a/src/Components/MovieCard/MovieCard.scss
+++ b/src/Components/MovieCard/MovieCard.scss
@@ -2,12 +2,14 @@
   width: 15rem;
 }
 
-.card-img{
-  opacity: .25;
+.card-img-overlay{
+  opacity: 0;
 }
 
-.card-text:hover{
-  opacity: 0%;
+.card:hover > .card-img-overlay{
+  opacity: 1 !important;
 }
 
-.card-text:hover ~ .card-img{ opacity: 1 !important; }
+.card:hover > .card-img{
+  opacity: 0.2;
+}
