--- a/src/Components/SelectedMovie/SelectedMovie.scss
+++ b/src/Components/SelectedMovie/SelectedMovie.scss
@@ -20,7 +20,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-self: center;
-    background-color:aquamarine;
+    background: linear-gradient(#e66465, #9198e5);
     border-radius: 5%;
     height: fit-content;
     padding: 2em;
@@ -40,7 +40,7 @@
     margin-bottom: .4em;
     }
     p, ul {
-    background-color:rgb(161, 25, 25);
+    background-color:rgba(161, 25, 25, 0.644);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     border: .2em solid yellow;
