--- a/src/Components/SelectedMovie/SelectedMovie.scss
+++ b/src/Components/SelectedMovie/SelectedMovie.scss
@@ -2,12 +2,12 @@
 .selectedMovie {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: gainsboro;
     padding: 5px;
     height: fit-content;
     img {
-    width: 40vw;
+    width: 45vw;
     height: 100vh;
     border-radius: 15%;
     box-shadow: 0px 16px 10px 0px #0000003d;
@@ -17,6 +17,7 @@
 
 .movie-info{
     display: flex;
+    width: 50vw;
     flex-direction: column;
     justify-content: space-between;
     align-self: center;
@@ -26,7 +27,7 @@
     padding: 2em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     h1 {
-    font-size: 5.5vw;
+    // font-size: 5.5vw;
     background-color: yellow;
     border: .2em solid rgb(161, 25, 25);;
     box-shadow: 0px 16px 10px 0px #0000003d;
