--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -11,7 +11,8 @@
 #nb-title{
     color: white;
     text-align: center;
-    font-family: 'Bowlby One SC', cursive;
+    font-family: 'Bowlby One SC';
     width: 100vw;
     font-size: 7.5vw;
 }
+
