Add stylings for ratings, budget, and revenue

--- a/src/Components/SelectedMovie/SelectedMovie.scss
+++ b/src/Components/SelectedMovie/SelectedMovie.scss
@@ -27,7 +27,7 @@
     padding: 2em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     h1 {
-    // font-size: 5.5vw;
+    font-size: 5.5vw;
     background-color: yellow;
     border: .2em solid rgb(161, 25, 25);;
     box-shadow: 0px 16px 10px 0px #0000003d;
