--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,11 @@
 }
 
 .no-rating {
+  padding-top: 40px;
   text-align: center;
   color: white;
+  img {
+    height: 30vh;
+    margin-bottom: 10vh;
+  }
 }
